# multithread-rust-arbitrage

./: Cargo.toml
src/: _parallelmethod.rs  main.rs  priceanalysis.rs  utils.rs  wsbinance.rs  wsbybit.rs  wscoinbase.rs
